# origin-birthday-tracker-bot

./: .gitignore  Cargo.toml  TODO
migrations/2023-12-10-043901_create_guilds/: up.sql
migrations/2023-12-10-051709_create_birthdays/: down.sql  up.sql
src/: cron.rs  helpers.rs  main.rs  models.rs  origin_bot.rs  persistence.rs  schema.rs  structs.rs
src/commands/: bday.rs  mod.rs  ping.rs  set_channel.rs  setup.rs  shutdown.rs  timezone.rs
src/commands/bday/: add.rs  del.rs  get.rs  list.rs  mod.rs  remove.rs  set.rs  today.rs
