[package]
name = "origin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
clap = {version="4.3", features=["derive"]}
dotenvy = "0.15"
envy = "0.4"
poise = "0.5"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
serenity = {version="0.11",default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1", features = ["full"] }
