[package]
name = "origin-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chronoutil = "0.2"
diesel = { version = "2.1", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1"
chrono-tz = { version = "0.8", features = ["case-insensitive"] }
clap = { version = "4.3", features = ["derive"] }
crossbeam = "0.8.2"
dotenvy = "0.15"
envy = "0.4"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
poise = "0.5.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serenity = { version = "0.11.7", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1", features = ["full"] }
